--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -2,6 +2,7 @@
 
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
+@using Kooco.Pikachu.ImageCompressors
 @using Kooco.Pikachu.Items.Dtos;
 @using MudBlazor;
 @using Pikachu.Items;
@@ -13,6 +14,7 @@
 @inherits PikachuComponentBase
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JSRuntime
+@inject IImageCompressorService ImageCompressorService
 @attribute [Authorize]
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
