--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -4,6 +4,7 @@
 @using Kooco.Pikachu.GroupBuyOrderInstructions
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.GroupPurchaseOverviews
+@using Kooco.Pikachu.ImageCompressors
 @using Kooco.Pikachu.Images
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Tenants
@@ -23,6 +24,7 @@
 @inject IMessageService _message
 @inject IConfiguration _configuration
 @inject IJSRuntime JSRuntime
+@inject IImageCompressorService ImageCompressorService
 @attribute [Authorize]
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
