--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -10,6 +10,7 @@
 @using Kooco.Pikachu.GroupBuyOrderInstructions
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.GroupPurchaseOverviews
+@using Kooco.Pikachu.ImageCompressors
 @using Kooco.Pikachu.Images
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Orders
@@ -33,6 +34,7 @@
 @inject IJSRuntime JSRuntime;
 @inject IOrderAppService _OrderAppService;
 @inject IPaymentGatewayAppService PaymentGatewayAppService
+@inject IImageCompressorService ImageCompressorService
 @attribute [Authorize]
 
 <style>
