Commit For Pk-1494

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1682,7 +1682,7 @@
                                                 <Label>
                                                     @L["Row"] @(module.ImageModules.IndexOf(imageModule) + 1)
                                                     <Span>
-                                                        <Tooltip Text="Upto 5 Images Allowed." Display="Display.InlineBlock">
+                                                        <Tooltip Text="@L["Upto5ImagesAllowed"]" Display="Display.InlineBlock">
                                                             <Icon Name="IconName.InfoCircle" />
                                                         </Tooltip>
                                                     </Span>
