--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1729,10 +1729,11 @@
                                         <div class="row mt-2">
                                             @if (module.GroupBuyModuleType is GroupBuyModuleType.ProductGroupModule)
                                             {
-                                                <Div Class="col-md-6 text-left mb-3">
-                                                    <InputText class="form-control" @bind-Value="module.ProductGroupModuleTitle" />
+                                                <Div Class="col-md-12 text-left mb-3">
+                                                    <TinyMCEEditor @bind-Value="@module.ProductGroupModuleTitle" Style="min-height: 500px;" />
+                                                    @* <InputText class="form-control" @bind-Value="module.ProductGroupModuleTitle" /> *@
                                                 </Div>
-                                                <Div Class="col-md-6 text-right mb-3">
+                                         @*        <Div Class="col-md-6 text-right mb-3">
                                                     <select class="form-select form-select" @onchange=@((e) => module.ProductGroupModuleImageSize = e.Value.ToString())>
                                                         <option value="">@L["SelectStyle"]</option>
                                                         @foreach (string size in ImageSizes)
@@ -1748,7 +1749,7 @@
                                                             }
                                                         }
                                                     </select>
-                                                </Div>
+                                                </Div> *@
                                             }
                                             @foreach (var selectedItem in module.Selected)
                                             {
