--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -3105,7 +3105,7 @@
                     </div>
                 }
                 <div class="row my-2">
-                    <label class="form-label">@L["RefundAmount"]</label>
+                    <label class="form-label">@L["RefundAmount1"]</label>
                     <div class="col-12 mb-2">
                         <input type="checkbox" class="form-check-input" checked="@refunds.IsRefundAmount" @onchange="() => UpdateCheckState(3)" />
 
