--- a/src/Kooco.Pikachu.Blazor/Pages/Components/MemberTagComponent.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/MemberTagComponent.razor
@@ -1,7 +1,7 @@
 ﻿@using Kooco.Pikachu.Members
 @inherits PikachuComponentBase
 
-<PikachuBadge Class="@_badgeColor" Style="@(_margin)">@Tag</PikachuBadge>
+<PikachuBadge Class="@_badgeColor" Style="@(_margin)">@L[Tag]</PikachuBadge>
 
 @code {
     [Parameter]
