Commit for Pk-1502

--- a/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/AddOnProduct.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/AddOnProduct.razor
@@ -17,7 +17,7 @@
         <Column ColumnSize="ColumnSize.Is6" TextAlignment="TextAlignment.End">
             <Button Clicked="CreateNewAddOnProduct" Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary">
                 <Icon Name="IconName.Add"></Icon>
-                @L["New"]
+                @L["NewAddOn"]
             </Button>
         </Column>
     </Row>
