--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
@@ -17,7 +17,7 @@
         <Column ColumnSize="ColumnSize.Is6" TextAlignment="TextAlignment.End">
             <Button  Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary" Clicked="CreateNewDiscountCode">
                 <Icon Name="IconName.Add"></Icon>
-                @L["New"]
+                @L["AddNewDiscountCode"]
             </Button>
         </Column>
     </Row>
