#PK-1414 EDM Function backend

--- a/src/Kooco.Pikachu.Blazor/Pages/Components/Copy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/Copy.razor
@@ -29,7 +29,7 @@
     }
     @if (ShouldDisplayText && IconAlignment == Alignment.Start)
     {
-        <Span>
+        <Span @onclick="CopyToClipboard">
             @_displayText
         </Span>
     }
